--- a/Tabla.html
+++ b/Tabla.html
@@ -240,7 +240,7 @@ getUserData();
 
 
     <div class="button-container">
-        <button onclick="location.href='user2.html'" class="styled-button">
+        <button onclick="location.href='User2.html'" class="styled-button">
             🔙 Ir a la interfaz de usuario
         </button>
     </div>
