--- a/register.html
+++ b/register.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
- <!-- Incluir Supabase desde CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.0.0/dist/supabase.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
 <body class="min-h-screen bg-gradient-to-r from-gray-900 to-gray-800 text-white flex flex-col items-center justify-center p-6">
 
@@ -52,52 +50,44 @@
         <p>Regístrate para acceder al sistema y gestionar tu vehículo en el estacionamiento.</p>
     </div>
 
-<script>
-        // Configuración de Supabase (reemplaza con tu propia URL y anon key)
-        const supabaseUrl = 'https://vzgoxegupsjkiwlxkete.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ6Z294ZWd1cHNqa2l3bHhrZXRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzkzMzg0MjksImV4cCI6MjA1NDkxNDQyOX0.HLowX56y38MOOXNvWVpndSzqXBUqZoiksz0P_H0fauc';
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    <script>
+        // ✅ INICIALIZAR SUPABASE
+        const supabase = window.supabase.createClient(
 
-        // Función para registrar el usuario
-        async function registerUser(nombre, correo, Contraseña) {
+            "https://vzgoxegupsjkiwlxkete.supabase.co",
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ6Z294ZWd1cHNqa2l3bHhrZXRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzkzMzg0MjksImV4cCI6MjA1NDkxNDQyOX0.HLowX56y38MOOXNvWVpndSzqXBUqZoiksz0P_H0fauc"
+        );
+
+    
+
+        // ✅ MANEJAR EL REGISTRO DE USUARIO
+        document.getElementById('register-form').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            const name = document.getElementById('register-name').value;
+            const email = document.getElementById('register-email').value;
+            const password = document.getElementById('register-password').value;
+
+            // 2️⃣ REGISTRAR AL USUARIO EN SUPABASE AUTH
             const { data, error } = await supabase.auth.signUp({
-                correo,
-                Contraseña,
+                email,
+                password,
+                options: {
+                    data: { full_name: name } // Guardar nombre en `user_metadata`
+                }
             });
 
             if (error) {
-                alert('Error al registrar: ' + error.message);
-            } else {
-                // Si el registro es exitoso, agregamos los datos del usuario a la tabla "usuarios"
-                const { error: insertError } = await supabase.from('usuarios').insert([
-                    { nombre, correo }
-                ]);
-                if (insertError) {
-                    alert('Error al agregar los datos: ' + insertError.message);
-                } else {
-                    alert('Usuario registrado exitosamente');
-                    // Redirigir a la página de inicio de sesión o página principal
-                    window.location.href = 'login.html';
-                }
+                console.error("Error al registrar usuario:", error.message);
+                return;
             }
-        }
 
-        // Manejar el envío del formulario
-        document.getElementById('register-form').addEventListener('submit', function (e) {
-            e.preventDefault();
+            console.log("Registro exitoso. Se envió un correo de confirmación.");
 
-            const nombre = document.getElementById('register-name').value;
-            const correo = document.getElementById('register-email').value;
-            const Contraseña = document.getElementById('register-password').value;
+            window.location.href = "Usuario.html";
 
-            registerUser(nombre, correo, Contraseña);
         });
     </script>
-
-
-
-
-
 
 </body>
 </html>
