--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
 
             console.log("Registro exitoso. Se envió un correo de confirmación.");
 
-            window.location.href = "Usuario.html";
+            window.location.href = "User2.html";
 
         });
     </script>
