--- a/admin_page.html
+++ b/admin_page.html
@@ -54,7 +54,11 @@
       <div class="space-y-3">
         <button class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-500">Registrar nuevo usuario</button>
         <button class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-500">Exportar historial</button>
-        <button class="w-full bg-yellow-500 text-white py-2 rounded hover:bg-yellow-400">Ver vehículos en espera</button>
+        <button class="w-full bg-yellow-500 text-white py-2 rounded hover:bg-yellow-400" 
+          onclick="window.location.href='solicitud.html';"
+      >
+        Ver Solicitudes de acceso
+      </button>
         <button class="w-full bg-red-500 text-white py-2 rounded hover:bg-red-400">Bloquear acceso temporal</button>
         <button class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-500">Ver reportes</button>
         <button 
