--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
                 if (userError) {
                     alert("Error al insertar en tabla users: " + userError.message);
                 } else {
-                    alert("Usuario registrado correctamente.");
+                       alert("¡Registro exitoso! Espera a que un administrador apruebe tu registro.");
                     window.location.href = "login.html";
                 }
             }
