--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <!-- Barra Superior -->
     <div class="absolute top-4 right-6 flex space-x-4">
         <a href="index.html" class="text-white border-white flex items-center space-x-2 border-2 px-4 py-2 rounded-md">
-            <i class="fas fa-sign-in-alt"></i> <span>Home</span>
+            <i class="fas fa-sign-in-alt"></i> <span>Inicio</span>
         </a>
         <a href="register.html" class="bg-green-500 hover:bg-green-600 text-white flex items-center space-x-2 px-4 py-2 rounded-md">
             <i class="fas fa-user-plus"></i> <span>Registrarse</span>
