--- a/register.html
+++ b/register.html
@@ -12,11 +12,11 @@
     <!-- Barra Superior -->
     <div class="absolute top-4 right-4 flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-4">
         <a href="index.html" class="text-white border-white flex items-center justify-center space-x-2 border-2 px-3 py-2 rounded-md text-sm sm:text-base">
-            <i class="fas fa-sign-in-alt"></i> <span>Home</span>
+            <i class="fas fa-sign-in-alt"></i> <span>INICIO</span>
         </a>
 
         <a href="login.html" class="bg-blue-500 hover:bg-blue-600 text-white flex items-center justify-center space-x-2 px-3 py-2 rounded-md text-sm sm:text-base">
-            <i class="fas fa-sign-in-alt"></i> <span>Iniciar Sesión</span>
+            <i class="fas fa-sign-in-alt"></i> <span>INICIAR SESIÓN</span>
         </a>
     </div>
 
