--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Barra Superior -->
     <div class="absolute top-4 right-6 flex space-x-4">
        <a href="login.html" <button class="text-white border-white flex items-center space-x-2 border-2 px-4 py-2 rounded-md">
-            <i class="fas fa-sign-in-alt"></i> <span>Iniciar Sesión</span>
+            <i class="fas fa-sign-in-alt"></i> <span>INICIAR SESIÓN </span>
         </button></a>
         <a href="register.html" <button class="bg-green-500 hover:bg-green-600 text-white flex items-center space-x-2 px-4 py-2 rounded-md">
             <i class="fas fa-user-plus"></i> <span>Registrarse</span>
