--- a/configuracion_admin.html
+++ b/configuracion_admin.html
@@ -40,7 +40,7 @@
           <input id="total_lugares" type="number" class="p-2 border rounded w-full" />
         </div>
         <div>
-          <label for="lugares_discapacitados" class="block">Lugares asignados para discapacitados</label>
+          <label for="lugares_discapacitados" class="block">Lugares asignados para Personas con alguna discapacidad</label>
           <input id="lugares_discapacitados" type="number" class="p-2 border rounded w-full" />
         </div>
         <div>
